[gd_scene load_steps=13 format=3 uid="uid://cf0kd23uthfo7"]

[ext_resource type="Texture2D" uid="uid://ct5pgu0wakcnt" path="res://inventory/sprite/main panel.png" id="1_adtwh"]
[ext_resource type="Texture2D" uid="uid://pi5xk4j21wog" path="res://inventory/sprite/title.png" id="2_ddnac"]
[ext_resource type="Script" path="res://ui/settings.gd" id="2_itgu4"]
[ext_resource type="FontFile" uid="uid://ciyy3p85tikw" path="res://font/Arcadepix Plus.ttf" id="3_4wqo2"]
[ext_resource type="Texture2D" uid="uid://cfreqop0x1bn3" path="res://inventory/sprite/x_normal.png" id="4_lgabv"]
[ext_resource type="Texture2D" uid="uid://c0vdjuxcdpsn7" path="res://inventory/sprite/x_pressed.png" id="5_446ok"]
[ext_resource type="Texture2D" uid="uid://bjmu3j8sjymrr" path="res://inventory/sprite/x_hover.png" id="6_ai1ft"]
[ext_resource type="Texture2D" uid="uid://bni6pqttrg3r1" path="res://inventory/sprite/x_disabled.png" id="7_wa8ub"]
[ext_resource type="Texture2D" uid="uid://dg1diagg1gyh5" path="res://inventory/sprite/inner_panel.png" id="8_soo31"]

[sub_resource type="LabelSettings" id="LabelSettings_u7kdf"]
font = ExtResource("3_4wqo2")
font_size = 14
font_color = Color(0.45098, 0.45098, 0.45098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vu8r3"]
font = ExtResource("3_4wqo2")
font_size = 11
font_color = Color(0.341176, 0.341176, 0.341176, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_64f88"]

[node name="settings" type="NinePatchRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -86.0
offset_right = 76.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
texture = ExtResource("1_adtwh")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource("2_itgu4")

[node name="title" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = -10.0
offset_right = 45.0
offset_bottom = 8.0
grow_horizontal = 2
mouse_filter = 1
texture = ExtResource("2_ddnac")
patch_margin_left = 8
patch_margin_top = 6
patch_margin_right = 8
patch_margin_bottom = 2

[node name="Label" type="Label" parent="title"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
text = "Setting"
label_settings = SubResource("LabelSettings_u7kdf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="close" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -9.0
offset_bottom = 10.0
grow_horizontal = 0
texture_normal = ExtResource("4_lgabv")
texture_pressed = ExtResource("5_446ok")
texture_hover = ExtResource("6_ai1ft")
texture_disabled = ExtResource("7_wa8ub")

[node name="setting_list" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 10.0
offset_right = 66.0
offset_bottom = 91.0
grow_horizontal = 2
theme_override_constants/separation = 1

[node name="scale" type="NinePatchRect" parent="setting_list"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture = ExtResource("8_soo31")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="setting_list/scale"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 5.0
offset_right = 60.0
offset_bottom = 15.0
grow_horizontal = 2
text = "- scale -"
label_settings = SubResource("LabelSettings_vu8r3")
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="setting_list/scale"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -4.0
offset_right = -5.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_64f88")
min_value = 0.5
max_value = 1.5
step = 0.1
value = 1.0

[node name="fullscreen" type="NinePatchRect" parent="setting_list"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture = ExtResource("8_soo31")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="setting_list/fullscreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 5.0
offset_right = 60.0
offset_bottom = 15.0
grow_horizontal = 2
text = "- fullscreen -"
label_settings = SubResource("LabelSettings_vu8r3")
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="setting_list/fullscreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -6.0
offset_right = 12.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="gui_input" from="setting_list/scale/HSlider" to="." method="_on_h_slider_gui_input"]
[connection signal="toggled" from="setting_list/fullscreen/CheckBox" to="." method="_on_check_box_toggled"]
